<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.subjectcalc.ParallelogramFragment">


    <include
        android:id="@+id/main_toolbar"
        layout="@layout/main_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_bg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_side_medium">

            <ImageView
                android:id="@+id/image_calc"
                android:layout_width="0dp"
                android:layout_height="146dp"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_parallelogram"
                app:layout_constraintBottom_toTopOf="@id/layout_edt_base"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_base"
                style="@style/Theme.MathIo.TextInputLayout"
                android:hint="@string/base"
                app:layout_constraintBottom_toTopOf="@id/layout_edt_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_calc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_base"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunito_regular"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black_text"
                    android:maxLines="1"
                    android:textColorHint="@color/grey_text"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_height"
                style="@style/Theme.MathIo.TextInputLayout"
                android:hint="@string/height"
                app:layout_constraintBottom_toTopOf="@id/btn_calculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_edt_base">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunito_regular"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/black_text"
                    android:textColorHint="@color/grey_text"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_side_large"
                android:background="@drawable/btn_calculater_bg"
                android:fontFamily="@font/nunito_bold"
                android:paddingHorizontal="24dp"
                android:text="@string/calculator"
                android:textColor="@color/white_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_edt_height" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_side_medium"
                android:fontFamily="@font/nunito_bold"
                android:textAlignment="center"
                android:textColor="@color/black_text"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_calculate"
                tools:text="Result\n600" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>